# multi_agent-_reinforcement-_learning

./: README.md
2025-multi-agent-traffic/: Makefile  README.md  pyproject.toml  setup.py  tox.ini
2025-multi-agent-traffic/notebooks/: 01_multi_agent_metadrive.ipynb  02_rllib_mulit_agent.ipynb
2025-multi-agent-traffic/result/collision+lanechange/: TESTING.docx  collision+lanechange.docx
2025-multi-agent-traffic/result/cutin and cutout/: cutin-cutout_straightroad.docx
2025-multi-agent-traffic/result/cutin and cutout/roundabout/: Doc3.docx
2025-multi-agent-traffic/src/marl_traffic_gen/: run_rllib_traffic_gen.py
2025-multi-agent-traffic/src/marl_traffic_gen/configs/: root.yaml
2025-multi-agent-traffic/src/marl_traffic_gen/configs/agent/rllib/: rllib_ppo.yaml
2025-multi-agent-traffic/src/marl_traffic_gen/configs/environment/: marl_metadrive.yaml  metadrive.yaml
2025-multi-agent-traffic/src/marl_traffic_gen/configs/learning/: rllib.yaml
2025-multi-agent-traffic/src/marl_traffic_gen/configs/testing/: marl_metadrive.yaml
2025-multi-agent-traffic/src/marl_traffic_gen/environments/: __init__.py
2025-multi-agent-traffic/src/marl_traffic_gen/environments/envs/: __init__.py  metadrive_environment.py  rllib_marl_metadrive.py  rllib_metadrive.py
2025-multi-agent-traffic/src/marl_traffic_gen/evaluation/: __init__.py  marl_metadrive_gif_agent_evaluator.py
